--- a/public/themes/soho-light/theme.css
+++ b/public/themes/soho-light/theme.css
@@ -115,7 +115,7 @@
   font-feature-settings: inherit;
   border-radius: 6px;
 }
-.p-link:focus {
+.p-link:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #c7bbfa;
@@ -409,8 +409,8 @@
   border-color: transparent;
   background: #f6f9fc;
 }
-.p-datepicker .p-datepicker-header .p-datepicker-prev:focus,
-.p-datepicker .p-datepicker-header .p-datepicker-next:focus {
+.p-datepicker .p-datepicker-header .p-datepicker-prev:focus-visible,
+.p-datepicker .p-datepicker-header .p-datepicker-next:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #c7bbfa;
@@ -496,7 +496,7 @@
   border-color: transparent;
   background: #f6f9fc;
 }
-.p-datepicker .p-timepicker button:focus {
+.p-datepicker .p-timepicker button:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #c7bbfa;
@@ -1384,7 +1384,7 @@
   border-color: transparent;
   background: #f6f9fc;
 }
-.p-multiselect-panel .p-multiselect-header .p-multiselect-close:focus {
+.p-multiselect-panel .p-multiselect-header .p-multiselect-close:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #c7bbfa;
@@ -2578,8 +2578,8 @@
   border-color: transparent;
   background: #f6f9fc;
 }
-.p-carousel .p-carousel-content .p-carousel-prev:focus,
-.p-carousel .p-carousel-content .p-carousel-next:focus {
+.p-carousel .p-carousel-content .p-carousel-prev:focus-visible,
+.p-carousel .p-carousel-content .p-carousel-next:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #c7bbfa;
@@ -2683,7 +2683,7 @@
 .p-datatable .p-sortable-column.p-highlight:hover .p-sortable-column-icon {
   color: #5a37f1;
 }
-.p-datatable .p-sortable-column:focus {
+.p-datatable .p-sortable-column:focus-visible {
   box-shadow: inset 0 0 0 0.15rem #c7bbfa;
   outline: 0 none;
 }
@@ -2718,10 +2718,10 @@
   border-color: transparent;
   background: #f6f9fc;
 }
-.p-datatable .p-datatable-tbody > tr > td .p-row-toggler:focus,
-.p-datatable .p-datatable-tbody > tr > td .p-row-editor-init:focus,
-.p-datatable .p-datatable-tbody > tr > td .p-row-editor-save:focus,
-.p-datatable .p-datatable-tbody > tr > td .p-row-editor-cancel:focus {
+.p-datatable .p-datatable-tbody > tr > td .p-row-toggler:focus-visible,
+.p-datatable .p-datatable-tbody > tr > td .p-row-editor-init:focus-visible,
+.p-datatable .p-datatable-tbody > tr > td .p-row-editor-save:focus-visible,
+.p-datatable .p-datatable-tbody > tr > td .p-row-editor-cancel:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #c7bbfa;
@@ -2732,7 +2732,7 @@
 .p-datatable .p-datatable-tbody > tr > td > .p-column-title {
   font-weight: 700;
 }
-.p-datatable .p-datatable-tbody > tr:focus {
+.p-datatable .p-datatable-tbody > tr:focus-visible {
   outline: 0.15rem solid #c7bbfa;
   outline-offset: -0.15rem;
 }
@@ -3184,7 +3184,7 @@
   border-color: transparent;
   background: #f6f9fc;
 }
-.fc.fc-theme-standard .fc-view-harness .fc-popover .fc-popover-header .fc-popover-close:focus {
+.fc.fc-theme-standard .fc-view-harness .fc-popover .fc-popover-header .fc-popover-close:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #c7bbfa;
@@ -3396,7 +3396,7 @@
   color: inherit;
   border-radius: 50%;
 }
-.p-organizationchart .p-organizationchart-node-content .p-node-toggler:focus {
+.p-organizationchart .p-organizationchart-node-content .p-node-toggler:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #c7bbfa;
@@ -3600,7 +3600,7 @@
   border-color: transparent;
   background: #f6f9fc;
 }
-.p-tree .p-tree-container .p-treenode .p-treenode-content .p-tree-toggler:focus {
+.p-tree .p-tree-container .p-treenode .p-treenode-content .p-tree-toggler:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #c7bbfa;
@@ -3752,7 +3752,7 @@
   border-color: transparent;
   background: #f6f9fc;
 }
-.p-treetable .p-treetable-tbody > tr > td .p-treetable-toggler:focus {
+.p-treetable .p-treetable-tbody > tr > td .p-treetable-toggler:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #c7bbfa;
@@ -3763,7 +3763,7 @@
 .p-treetable .p-treetable-tbody > tr > td .p-treetable-toggler + .p-checkbox .p-indeterminate .p-checkbox-icon {
   color: #043d75;
 }
-.p-treetable .p-treetable-tbody > tr:focus {
+.p-treetable .p-treetable-tbody > tr:focus-visible {
   outline: 0.15rem solid #c7bbfa;
   outline-offset: -0.15rem;
 }
@@ -3862,7 +3862,7 @@
 .p-accordion .p-accordion-header .p-accordion-header-link .p-accordion-toggle-icon {
   margin-right: 0.5rem;
 }
-.p-accordion .p-accordion-header:not(.p-disabled) .p-accordion-header-link:focus {
+.p-accordion .p-accordion-header:not(.p-disabled) .p-accordion-header-link:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 1px #c7bbfa;
@@ -3952,7 +3952,7 @@
 .p-fieldset.p-fieldset-toggleable .p-fieldset-legend a .p-fieldset-toggler {
   margin-right: 0.5rem;
 }
-.p-fieldset.p-fieldset-toggleable .p-fieldset-legend a:focus {
+.p-fieldset.p-fieldset-toggleable .p-fieldset-legend a:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #c7bbfa;
@@ -4018,7 +4018,7 @@
   border-color: transparent;
   background: #f6f9fc;
 }
-.p-panel .p-panel-header .p-panel-header-icon:focus {
+.p-panel .p-panel-header .p-panel-header-icon:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #c7bbfa;
@@ -4052,7 +4052,7 @@
   border: 0 none;
   transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s;
 }
-.p-scrollpanel .p-scrollpanel-bar:focus {
+.p-scrollpanel .p-scrollpanel-bar:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #c7bbfa;
@@ -4072,7 +4072,7 @@
   background: #dfe7ef;
   transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s;
 }
-.p-splitter .p-splitter-gutter .p-splitter-gutter-handle:focus {
+.p-splitter .p-splitter-gutter .p-splitter-gutter-handle:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #c7bbfa;
@@ -4102,7 +4102,7 @@
   transition: box-shadow 0.2s;
   margin: 0 0 -2px 0;
 }
-.p-tabview .p-tabview-nav li .p-tabview-nav-link:not(.p-disabled):focus {
+.p-tabview .p-tabview-nav li .p-tabview-nav-link:not(.p-disabled):focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 1px #c7bbfa;
@@ -4124,7 +4124,7 @@
   box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
   border-radius: 0;
 }
-.p-tabview .p-tabview-nav-btn.p-link:focus {
+.p-tabview .p-tabview-nav-btn.p-link:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 1px #c7bbfa;
@@ -4229,7 +4229,7 @@
   border-color: transparent;
   background: #f6f9fc;
 }
-.p-dialog .p-dialog-header .p-dialog-header-icon:focus {
+.p-dialog .p-dialog-header .p-dialog-header-icon:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #c7bbfa;
@@ -4333,8 +4333,8 @@
   border-color: transparent;
   background: #f6f9fc;
 }
-.p-sidebar .p-sidebar-header .p-sidebar-close:focus,
-.p-sidebar .p-sidebar-header .p-sidebar-icon:focus {
+.p-sidebar .p-sidebar-header .p-sidebar-close:focus-visible,
+.p-sidebar .p-sidebar-header .p-sidebar-icon:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #c7bbfa;
@@ -4440,7 +4440,7 @@
   transition: box-shadow 0.2s;
   border-radius: 6px;
 }
-.p-breadcrumb .p-breadcrumb-list li .p-menuitem-link:focus {
+.p-breadcrumb .p-breadcrumb-list li .p-menuitem-link:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #c7bbfa;
@@ -5033,7 +5033,7 @@
 .p-panelmenu .p-panelmenu-header .p-panelmenu-header-content .p-panelmenu-header-action .p-menuitem-icon {
   margin-right: 0.5rem;
 }
-.p-panelmenu .p-panelmenu-header:not(.p-disabled):focus .p-panelmenu-header-content {
+.p-panelmenu .p-panelmenu-header:not(.p-disabled):focus-visible .p-panelmenu-header-content {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 1px #c7bbfa;
@@ -5158,7 +5158,7 @@
   margin-top: 0.5rem;
   color: #708da9;
 }
-.p-steps .p-steps-item .p-menuitem-link:not(.p-disabled):focus {
+.p-steps .p-steps-item .p-menuitem-link:not(.p-disabled):focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #c7bbfa;
@@ -5206,7 +5206,7 @@
 .p-tabmenu .p-tabmenu-nav .p-tabmenuitem .p-menuitem-link .p-menuitem-icon {
   margin-right: 0.5rem;
 }
-.p-tabmenu .p-tabmenu-nav .p-tabmenuitem .p-menuitem-link:not(.p-disabled):focus {
+.p-tabmenu .p-tabmenu-nav .p-tabmenuitem .p-menuitem-link:not(.p-disabled):focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 1px #c7bbfa;
@@ -5482,7 +5482,7 @@
 .p-toast .p-toast-message .p-toast-icon-close:hover {
   background: rgba(255, 255, 255, 0.3);
 }
-.p-toast .p-toast-message .p-toast-icon-close:focus {
+.p-toast .p-toast-message .p-toast-icon-close:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #c7bbfa;
@@ -5777,7 +5777,7 @@
   border-radius: 6px;
   transition: background-color 0.2s, color 0.2s, box-shadow 0.2s;
 }
-.p-chip .p-chip-remove-icon:focus {
+.p-chip .p-chip-remove-icon:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #c7bbfa;
