--- a/public/themes/nova-vue/theme.css
+++ b/public/themes/nova-vue/theme.css
@@ -91,7 +91,7 @@
   font-feature-settings: inherit;
   border-radius: 3px;
 }
-.p-link:focus {
+.p-link:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 0.2rem #c2e9d8;
@@ -385,8 +385,8 @@
   border-color: transparent;
   background: transparent;
 }
-.p-datepicker .p-datepicker-header .p-datepicker-prev:focus,
-.p-datepicker .p-datepicker-header .p-datepicker-next:focus {
+.p-datepicker .p-datepicker-header .p-datepicker-prev:focus-visible,
+.p-datepicker .p-datepicker-header .p-datepicker-next:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 0.2rem #c2e9d8;
@@ -472,7 +472,7 @@
   border-color: transparent;
   background: transparent;
 }
-.p-datepicker .p-timepicker button:focus {
+.p-datepicker .p-timepicker button:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 0.2rem #c2e9d8;
@@ -1364,7 +1364,7 @@
   border-color: transparent;
   background: transparent;
 }
-.p-multiselect-panel .p-multiselect-header .p-multiselect-close:focus {
+.p-multiselect-panel .p-multiselect-header .p-multiselect-close:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 0.2rem #c2e9d8;
@@ -2566,8 +2566,8 @@
   border-color: transparent;
   background: transparent;
 }
-.p-carousel .p-carousel-content .p-carousel-prev:focus,
-.p-carousel .p-carousel-content .p-carousel-next:focus {
+.p-carousel .p-carousel-content .p-carousel-prev:focus-visible,
+.p-carousel .p-carousel-content .p-carousel-next:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 0.2rem #c2e9d8;
@@ -2671,7 +2671,7 @@
 .p-datatable .p-sortable-column.p-highlight:hover .p-sortable-column-icon {
   color: #ffffff;
 }
-.p-datatable .p-sortable-column:focus {
+.p-datatable .p-sortable-column:focus-visible {
   box-shadow: inset 0 0 0 0.15rem #c2e9d8;
   outline: 0 none;
 }
@@ -2706,10 +2706,10 @@
   border-color: transparent;
   background: transparent;
 }
-.p-datatable .p-datatable-tbody > tr > td .p-row-toggler:focus,
-.p-datatable .p-datatable-tbody > tr > td .p-row-editor-init:focus,
-.p-datatable .p-datatable-tbody > tr > td .p-row-editor-save:focus,
-.p-datatable .p-datatable-tbody > tr > td .p-row-editor-cancel:focus {
+.p-datatable .p-datatable-tbody > tr > td .p-row-toggler:focus-visible,
+.p-datatable .p-datatable-tbody > tr > td .p-row-editor-init:focus-visible,
+.p-datatable .p-datatable-tbody > tr > td .p-row-editor-save:focus-visible,
+.p-datatable .p-datatable-tbody > tr > td .p-row-editor-cancel:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 0.2rem #c2e9d8;
@@ -2720,7 +2720,7 @@
 .p-datatable .p-datatable-tbody > tr > td > .p-column-title {
   font-weight: 700;
 }
-.p-datatable .p-datatable-tbody > tr:focus {
+.p-datatable .p-datatable-tbody > tr:focus-visible {
   outline: 0.15rem solid #c2e9d8;
   outline-offset: -0.15rem;
 }
@@ -3172,7 +3172,7 @@
   border-color: transparent;
   background: transparent;
 }
-.fc.fc-theme-standard .fc-view-harness .fc-popover .fc-popover-header .fc-popover-close:focus {
+.fc.fc-theme-standard .fc-view-harness .fc-popover .fc-popover-header .fc-popover-close:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 0.2rem #c2e9d8;
@@ -3384,7 +3384,7 @@
   color: inherit;
   border-radius: 50%;
 }
-.p-organizationchart .p-organizationchart-node-content .p-node-toggler:focus {
+.p-organizationchart .p-organizationchart-node-content .p-node-toggler:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 0.2rem #c2e9d8;
@@ -3588,7 +3588,7 @@
   border-color: transparent;
   background: transparent;
 }
-.p-tree .p-tree-container .p-treenode .p-treenode-content .p-tree-toggler:focus {
+.p-tree .p-tree-container .p-treenode .p-treenode-content .p-tree-toggler:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 0.2rem #c2e9d8;
@@ -3740,7 +3740,7 @@
   border-color: transparent;
   background: transparent;
 }
-.p-treetable .p-treetable-tbody > tr > td .p-treetable-toggler:focus {
+.p-treetable .p-treetable-tbody > tr > td .p-treetable-toggler:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 0.2rem #c2e9d8;
@@ -3751,7 +3751,7 @@
 .p-treetable .p-treetable-tbody > tr > td .p-treetable-toggler + .p-checkbox .p-indeterminate .p-checkbox-icon {
   color: #333333;
 }
-.p-treetable .p-treetable-tbody > tr:focus {
+.p-treetable .p-treetable-tbody > tr:focus-visible {
   outline: 0.15rem solid #c2e9d8;
   outline-offset: -0.15rem;
 }
@@ -3850,7 +3850,7 @@
 .p-accordion .p-accordion-header .p-accordion-header-link .p-accordion-toggle-icon {
   margin-right: 0.5rem;
 }
-.p-accordion .p-accordion-header:not(.p-disabled) .p-accordion-header-link:focus {
+.p-accordion .p-accordion-header:not(.p-disabled) .p-accordion-header-link:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 0.2rem #c2e9d8;
@@ -3940,7 +3940,7 @@
 .p-fieldset.p-fieldset-toggleable .p-fieldset-legend a .p-fieldset-toggler {
   margin-right: 0.5rem;
 }
-.p-fieldset.p-fieldset-toggleable .p-fieldset-legend a:focus {
+.p-fieldset.p-fieldset-toggleable .p-fieldset-legend a:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 0.2rem #c2e9d8;
@@ -4006,7 +4006,7 @@
   border-color: transparent;
   background: transparent;
 }
-.p-panel .p-panel-header .p-panel-header-icon:focus {
+.p-panel .p-panel-header .p-panel-header-icon:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 0.2rem #c2e9d8;
@@ -4040,7 +4040,7 @@
   border: 0 none;
   transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s;
 }
-.p-scrollpanel .p-scrollpanel-bar:focus {
+.p-scrollpanel .p-scrollpanel-bar:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 0.2rem #c2e9d8;
@@ -4060,7 +4060,7 @@
   background: #d8dae2;
   transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s;
 }
-.p-splitter .p-splitter-gutter .p-splitter-gutter-handle:focus {
+.p-splitter .p-splitter-gutter .p-splitter-gutter-handle:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 0.2rem #c2e9d8;
@@ -4090,7 +4090,7 @@
   transition: background-color 0.2s, box-shadow 0.2s;
   margin: 0 0 -1px 0;
 }
-.p-tabview .p-tabview-nav li .p-tabview-nav-link:not(.p-disabled):focus {
+.p-tabview .p-tabview-nav li .p-tabview-nav-link:not(.p-disabled):focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 0.2rem #c2e9d8;
@@ -4112,7 +4112,7 @@
   box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
   border-radius: 0;
 }
-.p-tabview .p-tabview-nav-btn.p-link:focus {
+.p-tabview .p-tabview-nav-btn.p-link:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 0.2rem #c2e9d8;
@@ -4217,7 +4217,7 @@
   border-color: transparent;
   background: transparent;
 }
-.p-dialog .p-dialog-header .p-dialog-header-icon:focus {
+.p-dialog .p-dialog-header .p-dialog-header-icon:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 0.2rem #c2e9d8;
@@ -4321,8 +4321,8 @@
   border-color: transparent;
   background: transparent;
 }
-.p-sidebar .p-sidebar-header .p-sidebar-close:focus,
-.p-sidebar .p-sidebar-header .p-sidebar-icon:focus {
+.p-sidebar .p-sidebar-header .p-sidebar-close:focus-visible,
+.p-sidebar .p-sidebar-header .p-sidebar-icon:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 0.2rem #c2e9d8;
@@ -4428,7 +4428,7 @@
   transition: background-color 0.2s, box-shadow 0.2s;
   border-radius: 3px;
 }
-.p-breadcrumb .p-breadcrumb-list li .p-menuitem-link:focus {
+.p-breadcrumb .p-breadcrumb-list li .p-menuitem-link:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 0.2rem #c2e9d8;
@@ -5021,7 +5021,7 @@
 .p-panelmenu .p-panelmenu-header .p-panelmenu-header-content .p-panelmenu-header-action .p-menuitem-icon {
   margin-right: 0.5rem;
 }
-.p-panelmenu .p-panelmenu-header:not(.p-disabled):focus .p-panelmenu-header-content {
+.p-panelmenu .p-panelmenu-header:not(.p-disabled):focus-visible .p-panelmenu-header-content {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 0.2rem #c2e9d8;
@@ -5146,7 +5146,7 @@
   margin-top: 0.5rem;
   color: #848484;
 }
-.p-steps .p-steps-item .p-menuitem-link:not(.p-disabled):focus {
+.p-steps .p-steps-item .p-menuitem-link:not(.p-disabled):focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 0.2rem #c2e9d8;
@@ -5194,7 +5194,7 @@
 .p-tabmenu .p-tabmenu-nav .p-tabmenuitem .p-menuitem-link .p-menuitem-icon {
   margin-right: 0.5rem;
 }
-.p-tabmenu .p-tabmenu-nav .p-tabmenuitem .p-menuitem-link:not(.p-disabled):focus {
+.p-tabmenu .p-tabmenu-nav .p-tabmenuitem .p-menuitem-link:not(.p-disabled):focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 0.2rem #c2e9d8;
@@ -5470,7 +5470,7 @@
 .p-toast .p-toast-message .p-toast-icon-close:hover {
   background: rgba(255, 255, 255, 0.3);
 }
-.p-toast .p-toast-message .p-toast-icon-close:focus {
+.p-toast .p-toast-message .p-toast-icon-close:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 0.2rem #c2e9d8;
@@ -5765,7 +5765,7 @@
   border-radius: 3px;
   transition: background-color 0.2s, color 0.2s, box-shadow 0.2s;
 }
-.p-chip .p-chip-remove-icon:focus {
+.p-chip .p-chip-remove-icon:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 0.2rem #c2e9d8;
