--- a/public/themes/vela-purple/theme.css
+++ b/public/themes/vela-purple/theme.css
@@ -91,7 +91,7 @@
   font-feature-settings: inherit;
   border-radius: 3px;
 }
-.p-link:focus {
+.p-link:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #cf95d9;
@@ -385,8 +385,8 @@
   border-color: transparent;
   background: rgba(255, 255, 255, 0.03);
 }
-.p-datepicker .p-datepicker-header .p-datepicker-prev:focus,
-.p-datepicker .p-datepicker-header .p-datepicker-next:focus {
+.p-datepicker .p-datepicker-header .p-datepicker-prev:focus-visible,
+.p-datepicker .p-datepicker-header .p-datepicker-next:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #cf95d9;
@@ -472,7 +472,7 @@
   border-color: transparent;
   background: rgba(255, 255, 255, 0.03);
 }
-.p-datepicker .p-timepicker button:focus {
+.p-datepicker .p-timepicker button:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #cf95d9;
@@ -1360,7 +1360,7 @@
   border-color: transparent;
   background: rgba(255, 255, 255, 0.03);
 }
-.p-multiselect-panel .p-multiselect-header .p-multiselect-close:focus {
+.p-multiselect-panel .p-multiselect-header .p-multiselect-close:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #cf95d9;
@@ -2554,8 +2554,8 @@
   border-color: transparent;
   background: rgba(255, 255, 255, 0.03);
 }
-.p-carousel .p-carousel-content .p-carousel-prev:focus,
-.p-carousel .p-carousel-content .p-carousel-next:focus {
+.p-carousel .p-carousel-content .p-carousel-prev:focus-visible,
+.p-carousel .p-carousel-content .p-carousel-next:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #cf95d9;
@@ -2659,7 +2659,7 @@
 .p-datatable .p-sortable-column.p-highlight:hover .p-sortable-column-icon {
   color: #BA68C8;
 }
-.p-datatable .p-sortable-column:focus {
+.p-datatable .p-sortable-column:focus-visible {
   box-shadow: inset 0 0 0 0.15rem #cf95d9;
   outline: 0 none;
 }
@@ -2694,10 +2694,10 @@
   border-color: transparent;
   background: rgba(255, 255, 255, 0.03);
 }
-.p-datatable .p-datatable-tbody > tr > td .p-row-toggler:focus,
-.p-datatable .p-datatable-tbody > tr > td .p-row-editor-init:focus,
-.p-datatable .p-datatable-tbody > tr > td .p-row-editor-save:focus,
-.p-datatable .p-datatable-tbody > tr > td .p-row-editor-cancel:focus {
+.p-datatable .p-datatable-tbody > tr > td .p-row-toggler:focus-visible,
+.p-datatable .p-datatable-tbody > tr > td .p-row-editor-init:focus-visible,
+.p-datatable .p-datatable-tbody > tr > td .p-row-editor-save:focus-visible,
+.p-datatable .p-datatable-tbody > tr > td .p-row-editor-cancel:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #cf95d9;
@@ -2708,7 +2708,7 @@
 .p-datatable .p-datatable-tbody > tr > td > .p-column-title {
   font-weight: 600;
 }
-.p-datatable .p-datatable-tbody > tr:focus {
+.p-datatable .p-datatable-tbody > tr:focus-visible {
   outline: 0.15rem solid #cf95d9;
   outline-offset: -0.15rem;
 }
@@ -3160,7 +3160,7 @@
   border-color: transparent;
   background: rgba(255, 255, 255, 0.03);
 }
-.fc.fc-theme-standard .fc-view-harness .fc-popover .fc-popover-header .fc-popover-close:focus {
+.fc.fc-theme-standard .fc-view-harness .fc-popover .fc-popover-header .fc-popover-close:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #cf95d9;
@@ -3372,7 +3372,7 @@
   color: inherit;
   border-radius: 50%;
 }
-.p-organizationchart .p-organizationchart-node-content .p-node-toggler:focus {
+.p-organizationchart .p-organizationchart-node-content .p-node-toggler:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #cf95d9;
@@ -3576,7 +3576,7 @@
   border-color: transparent;
   background: rgba(255, 255, 255, 0.03);
 }
-.p-tree .p-tree-container .p-treenode .p-treenode-content .p-tree-toggler:focus {
+.p-tree .p-tree-container .p-treenode .p-treenode-content .p-tree-toggler:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #cf95d9;
@@ -3728,7 +3728,7 @@
   border-color: transparent;
   background: rgba(255, 255, 255, 0.03);
 }
-.p-treetable .p-treetable-tbody > tr > td .p-treetable-toggler:focus {
+.p-treetable .p-treetable-tbody > tr > td .p-treetable-toggler:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #cf95d9;
@@ -3739,7 +3739,7 @@
 .p-treetable .p-treetable-tbody > tr > td .p-treetable-toggler + .p-checkbox .p-indeterminate .p-checkbox-icon {
   color: rgba(255, 255, 255, 0.87);
 }
-.p-treetable .p-treetable-tbody > tr:focus {
+.p-treetable .p-treetable-tbody > tr:focus-visible {
   outline: 0.15rem solid #cf95d9;
   outline-offset: -0.15rem;
 }
@@ -3838,7 +3838,7 @@
 .p-accordion .p-accordion-header .p-accordion-header-link .p-accordion-toggle-icon {
   margin-right: 0.5rem;
 }
-.p-accordion .p-accordion-header:not(.p-disabled) .p-accordion-header-link:focus {
+.p-accordion .p-accordion-header:not(.p-disabled) .p-accordion-header-link:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 1px #cf95d9;
@@ -3953,7 +3953,7 @@
 .p-fieldset.p-fieldset-toggleable .p-fieldset-legend a .p-fieldset-toggler {
   margin-right: 0.5rem;
 }
-.p-fieldset.p-fieldset-toggleable .p-fieldset-legend a:focus {
+.p-fieldset.p-fieldset-toggleable .p-fieldset-legend a:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #cf95d9;
@@ -4019,7 +4019,7 @@
   border-color: transparent;
   background: rgba(255, 255, 255, 0.03);
 }
-.p-panel .p-panel-header .p-panel-header-icon:focus {
+.p-panel .p-panel-header .p-panel-header-icon:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #cf95d9;
@@ -4053,7 +4053,7 @@
   border: 0 none;
   transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s;
 }
-.p-scrollpanel .p-scrollpanel-bar:focus {
+.p-scrollpanel .p-scrollpanel-bar:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #cf95d9;
@@ -4073,7 +4073,7 @@
   background: #304562;
   transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s;
 }
-.p-splitter .p-splitter-gutter .p-splitter-gutter-handle:focus {
+.p-splitter .p-splitter-gutter .p-splitter-gutter-handle:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #cf95d9;
@@ -4103,7 +4103,7 @@
   transition: box-shadow 0.2s;
   margin: 0 0 -2px 0;
 }
-.p-tabview .p-tabview-nav li .p-tabview-nav-link:not(.p-disabled):focus {
+.p-tabview .p-tabview-nav li .p-tabview-nav-link:not(.p-disabled):focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 1px #cf95d9;
@@ -4125,7 +4125,7 @@
   box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
   border-radius: 0;
 }
-.p-tabview .p-tabview-nav-btn.p-link:focus {
+.p-tabview .p-tabview-nav-btn.p-link:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 1px #cf95d9;
@@ -4230,7 +4230,7 @@
   border-color: transparent;
   background: rgba(255, 255, 255, 0.03);
 }
-.p-dialog .p-dialog-header .p-dialog-header-icon:focus {
+.p-dialog .p-dialog-header .p-dialog-header-icon:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #cf95d9;
@@ -4334,8 +4334,8 @@
   border-color: transparent;
   background: rgba(255, 255, 255, 0.03);
 }
-.p-sidebar .p-sidebar-header .p-sidebar-close:focus,
-.p-sidebar .p-sidebar-header .p-sidebar-icon:focus {
+.p-sidebar .p-sidebar-header .p-sidebar-close:focus-visible,
+.p-sidebar .p-sidebar-header .p-sidebar-icon:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #cf95d9;
@@ -4441,7 +4441,7 @@
   transition: box-shadow 0.2s;
   border-radius: 3px;
 }
-.p-breadcrumb .p-breadcrumb-list li .p-menuitem-link:focus {
+.p-breadcrumb .p-breadcrumb-list li .p-menuitem-link:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #cf95d9;
@@ -5034,7 +5034,7 @@
 .p-panelmenu .p-panelmenu-header .p-panelmenu-header-content .p-panelmenu-header-action .p-menuitem-icon {
   margin-right: 0.5rem;
 }
-.p-panelmenu .p-panelmenu-header:not(.p-disabled):focus .p-panelmenu-header-content {
+.p-panelmenu .p-panelmenu-header:not(.p-disabled):focus-visible .p-panelmenu-header-content {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 1px #cf95d9;
@@ -5183,7 +5183,7 @@
   margin-top: 0.5rem;
   color: rgba(255, 255, 255, 0.6);
 }
-.p-steps .p-steps-item .p-menuitem-link:not(.p-disabled):focus {
+.p-steps .p-steps-item .p-menuitem-link:not(.p-disabled):focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #cf95d9;
@@ -5231,7 +5231,7 @@
 .p-tabmenu .p-tabmenu-nav .p-tabmenuitem .p-menuitem-link .p-menuitem-icon {
   margin-right: 0.5rem;
 }
-.p-tabmenu .p-tabmenu-nav .p-tabmenuitem .p-menuitem-link:not(.p-disabled):focus {
+.p-tabmenu .p-tabmenu-nav .p-tabmenuitem .p-menuitem-link:not(.p-disabled):focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 1px #cf95d9;
@@ -5507,7 +5507,7 @@
 .p-toast .p-toast-message .p-toast-icon-close:hover {
   background: rgba(255, 255, 255, 0.3);
 }
-.p-toast .p-toast-message .p-toast-icon-close:focus {
+.p-toast .p-toast-message .p-toast-icon-close:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #cf95d9;
@@ -5802,7 +5802,7 @@
   border-radius: 3px;
   transition: background-color 0.2s, color 0.2s, box-shadow 0.2s;
 }
-.p-chip .p-chip-remove-icon:focus {
+.p-chip .p-chip-remove-icon:focus-visible {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #cf95d9;
