--- a/public/themes/mira/theme.css
+++ b/public/themes/mira/theme.css
@@ -5683,7 +5683,7 @@
     background: rgba(255, 255, 255, 0.1);
     color: #ECEFF4;
   }
-  .p-galleria .p-galleria-thumbnail-container .p-galleria-thumbnail-item-content:focus {
+  .p-galleria .p-galleria-thumbnail-container .p-galleria-thumbnail-item-content:focus-visible {
     outline: 0 none;
     outline-offset: 0;
     box-shadow: 0 0 0 0.2rem #C0D0E0;
