--- a/public/themes/nano/theme.css
+++ b/public/themes/nano/theme.css
@@ -5655,7 +5655,7 @@
     background: rgba(255, 255, 255, 0.1);
     color: #f2f4f8;
   }
-  .p-galleria .p-galleria-thumbnail-container .p-galleria-thumbnail-item-content:focus {
+  .p-galleria .p-galleria-thumbnail-container .p-galleria-thumbnail-item-content:focus-visible {
     outline: 0 none;
     outline-offset: 0;
     box-shadow: 0 0 0 0.2rem #90c9f5;
