--- a/public/themes/rhea/theme.css
+++ b/public/themes/rhea/theme.css
@@ -5606,7 +5606,7 @@
     background: rgba(255, 255, 255, 0.1);
     color: #aeb6bf;
   }
-  .p-galleria .p-galleria-thumbnail-container .p-galleria-thumbnail-item-content:focus {
+  .p-galleria .p-galleria-thumbnail-container .p-galleria-thumbnail-item-content:focus-visible {
     outline: 0 none;
     outline-offset: 0;
     box-shadow: 0 0 0 0.2rem #e4e9ec;
