--- a/public/themes/soho-light/theme.css
+++ b/public/themes/soho-light/theme.css
@@ -5630,7 +5630,7 @@
     background: rgba(255, 255, 255, 0.1);
     color: #eff3f8;
   }
-  .p-galleria .p-galleria-thumbnail-container .p-galleria-thumbnail-item-content:focus {
+  .p-galleria .p-galleria-thumbnail-container .p-galleria-thumbnail-item-content:focus-visible {
     outline: 0 none;
     outline-offset: 0;
     box-shadow: 0 0 0 1px #c7bbfa;
