--- a/public/themes/viva-light/theme.css
+++ b/public/themes/viva-light/theme.css
@@ -5687,7 +5687,7 @@
     background: rgba(255, 255, 255, 0.1);
     color: #f5f5f5;
   }
-  .p-galleria .p-galleria-thumbnail-container .p-galleria-thumbnail-item-content:focus {
+  .p-galleria .p-galleria-thumbnail-container .p-galleria-thumbnail-item-content:focus-visible {
     outline: 0 none;
     outline-offset: 0;
     box-shadow: 0 0 0 0.1rem #bbc7ee;
