--- a/public/themes/bootstrap4-light-purple/theme.css
+++ b/public/themes/bootstrap4-light-purple/theme.css
@@ -5416,7 +5416,7 @@
   .p-message .p-message-close:hover {
     background: rgba(255, 255, 255, 0.3);
   }
-  .p-message .p-message-close:focus {
+  .p-message .p-message-close:focus-visible {
     outline: 0 none;
     outline-offset: 0;
     box-shadow: 0 0 0 0.2rem rgba(136, 60, 174, 0.5);
