--- a/public/themes/fluent-light/theme.css
+++ b/public/themes/fluent-light/theme.css
@@ -5355,7 +5355,7 @@
   .p-message .p-message-close:hover {
     background: rgba(255, 255, 255, 0.3);
   }
-  .p-message .p-message-close:focus {
+  .p-message .p-message-close:focus-visible {
     outline: 0 none;
     outline-offset: 0;
     box-shadow: inset 0 0 0 1px #605e5c;
