--- a/public/themes/nova/theme.css
+++ b/public/themes/nova/theme.css
@@ -2916,7 +2916,7 @@
     background: #007ad9;
     color: #ffffff;
   }
-  .p-column-filter-menu-button:focus {
+  .p-column-filter-menu-button:focus-visible {
     outline: 0 none;
     outline-offset: 0;
     box-shadow: 0 0 0 0.2rem #8dcdff;
@@ -2936,7 +2936,7 @@
     border-color: transparent;
     background: transparent;
   }
-  .p-column-filter-clear-button:focus {
+  .p-column-filter-clear-button:focus-visible {
     outline: 0 none;
     outline-offset: 0;
     box-shadow: 0 0 0 0.2rem #8dcdff;
@@ -2970,7 +2970,7 @@
     color: #333333;
     background: #eaeaea;
   }
-  .p-column-filter-overlay .p-column-filter-row-items .p-column-filter-row-item:focus {
+  .p-column-filter-overlay .p-column-filter-row-items .p-column-filter-row-item:focus-visible {
     outline: 0 none;
     outline-offset: 0;
     box-shadow: inset 0 0 0 0.15rem #8dcdff;
