--- a/public/themes/rhea/theme.css
+++ b/public/themes/rhea/theme.css
@@ -2904,7 +2904,7 @@
     background: #AFD3C8;
     color: #385048;
   }
-  .p-column-filter-menu-button:focus {
+  .p-column-filter-menu-button:focus-visible {
     outline: 0 none;
     outline-offset: 0;
     box-shadow: 0 0 0 0.2rem #e4e9ec;
@@ -2924,7 +2924,7 @@
     border-color: transparent;
     background: transparent;
   }
-  .p-column-filter-clear-button:focus {
+  .p-column-filter-clear-button:focus-visible {
     outline: 0 none;
     outline-offset: 0;
     box-shadow: 0 0 0 0.2rem #e4e9ec;
@@ -2958,7 +2958,7 @@
     color: #666666;
     background: #f4f4f4;
   }
-  .p-column-filter-overlay .p-column-filter-row-items .p-column-filter-row-item:focus {
+  .p-column-filter-overlay .p-column-filter-row-items .p-column-filter-row-item:focus-visible {
     outline: 0 none;
     outline-offset: 0;
     box-shadow: inset 0 0 0 0.15rem #e4e9ec;
