--- a/public/themes/viva-light/theme.css
+++ b/public/themes/viva-light/theme.css
@@ -2936,7 +2936,7 @@
     background: #ced6f1;
     color: #585858;
   }
-  .p-column-filter-menu-button:focus {
+  .p-column-filter-menu-button:focus-visible {
     outline: 0 none;
     outline-offset: 0;
     box-shadow: 0 0 0 0.1rem #bbc7ee;
@@ -2956,7 +2956,7 @@
     border-color: transparent;
     background: #edf0fA;
   }
-  .p-column-filter-clear-button:focus {
+  .p-column-filter-clear-button:focus-visible {
     outline: 0 none;
     outline-offset: 0;
     box-shadow: 0 0 0 0.1rem #bbc7ee;
@@ -2990,7 +2990,7 @@
     color: #6c6c6c;
     background: #edf0fA;
   }
-  .p-column-filter-overlay .p-column-filter-row-items .p-column-filter-row-item:focus {
+  .p-column-filter-overlay .p-column-filter-row-items .p-column-filter-row-item:focus-visible {
     outline: 0 none;
     outline-offset: 0;
     box-shadow: inset 0 0 0 0.15rem #bbc7ee;
