Remove focus visuals on mouse event

--- a/public/themes/lara-light-teal/theme.css
+++ b/public/themes/lara-light-teal/theme.css
@@ -5778,6 +5778,9 @@
     outline-offset: 0;
     box-shadow: 0 0 0 0.2rem #99F6E4;
   }
+  .p-chip .p-chip-remove-icon:focus {
+    outline: 0 none;
+  }
 
   .p-inplace .p-inplace-display {
     padding: 0.75rem 0.75rem;
