--- a/public/themes/saga-orange/theme.css
+++ b/public/themes/saga-orange/theme.css
@@ -5808,6 +5808,9 @@
     outline-offset: 0;
     box-shadow: 0 0 0 0.2rem #ffe69c;
   }
+  .p-chip .p-chip-remove-icon:focus {
+    outline: 0 none;
+  }
 
   .p-inplace .p-inplace-display {
     padding: 0.5rem 0.5rem;
