--- a/public/themes/fluent-light/theme.css
+++ b/public/themes/fluent-light/theme.css
@@ -5759,6 +5759,9 @@
     outline-offset: 0;
     box-shadow: inset 0 0 0 1px #605e5c;
   }
+  .p-chip .p-chip-remove-icon:focus {
+    outline: 0 none;
+  }
 
   .p-inplace .p-inplace-display {
     padding: 0.5rem 0.5rem;
