--- a/public/themes/nova-vue/theme.css
+++ b/public/themes/nova-vue/theme.css
@@ -5771,6 +5771,9 @@
     outline-offset: 0;
     box-shadow: 0 0 0 0.2rem #c2e9d8;
   }
+  .p-chip .p-chip-remove-icon:focus {
+    outline: 0 none;
+  }
 
   .p-inplace .p-inplace-display {
     padding: 0.429rem 0.429rem;
