--- a/assets/styles/layout/_doc.scss
+++ b/assets/styles/layout/_doc.scss
@@ -63,11 +63,12 @@
 }
 
 .doc-intro {
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
 
     p {
         font-size: 1.125rem;
         color: var(--surface-900);
+        margin: 0;
     }
 }
 
@@ -238,6 +239,10 @@
     pre {
         margin: 0;
     }
+
+    &:not(:last-child) {
+        margin-bottom: 1rem;
+    }
 }
 
 .doc-tablewrapper {
@@ -254,7 +259,7 @@
 
     th {
         border-bottom: 1px solid var(--surface-border);
-        padding: 1rem;
+        padding: .75rem;
         text-align: left;
         text-transform: capitalize;
     }
@@ -265,7 +270,7 @@
         }
 
         td {
-            padding: 1rem;
+            padding: .75rem;
             border-bottom: 1px solid var(--surface-border);
             white-space: pre-wrap;
             line-height: 1.5;
@@ -295,7 +300,6 @@
 
             &:first-child {
                 color: var(--primary-color);
-                font-weight: 700;
                 font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, Liberation Mono, monospace;
             }
 
